--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
         "gregwar/image-bundle": "*",
-        "aharen/omdbapi": "dev-master"
+        "aharen/omdbapi": "dev-master",
+        "knplabs/knp-paginator-bundle": "^2.5"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
